# text-analysis-tf-idf

./: .env  .gitignore  README.md  for_example.txt  pyproject.toml  requirements.txt
text_analysis/core/: settings.py  urls.py
text_analysis/report/: forms.py  report_servises.py  urls.py  views.py
text_analysis/report/templates/report/: show_report.html  upload_file.html
